modification sur balisage images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence web meilleure agence" height="40"></a>
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, createur de site web, web, internet, campagne de marketing digital , site, web designer contact</div>
 				<button id="nav-toggle" type="button" title="contact" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -64,7 +64,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web lyon, création logo lyon" />
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web lyon, création logo lyon">
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
@@ -83,7 +83,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2 class="mg-md text-center">
-					L'agence la panthere est une agence de web design qui aide <br/>
+					L'agence la panthere est une agence de web design qui aide <br>
 					les entreprises à devenir attractives et visible sur internet.</h2>
 				
 			</div>
@@ -96,7 +96,7 @@
 				<h3 class="mg-md text-center">
 					Web design
 				</h3>
-				<p class="text-center ">
+				<p class="text-center">
 					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
@@ -107,7 +107,7 @@
 				<h3 class="mg-md text-center">
 					Stratégie
 				</h3>
-				<p class="text-center ">
+				<p class="text-center">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
 			</div>
@@ -118,7 +118,7 @@
 				<h3 class="mg-md text-center">
 					Illustrations
 				</h3>
-				<p class="text-center ">
+				<p class="text-center">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
@@ -161,7 +161,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2 class="mg-md text-center tc-black">
-					Nous travaillons avec beaucoup de clients, <br/>
+					Nous travaillons avec beaucoup de clients, <br>
 					voici nos realisations
 				</h2>
 				
@@ -169,7 +169,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.webp" alt="lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb"></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -178,7 +178,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.webp" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour photographes"></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -189,7 +189,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -198,7 +198,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" class="img-responsive portfolio-thumb" alt="lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
