balise semantique et arial

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence web meilleure agence" height="40"></a>
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, createur de site web, web, internet, campagne de marketing digital , site, web designer contact</div>
-				<button id="nav-toggle" type="button" title="contact" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<button id="nav-toggle" aria-label="nav" type="button" title="contact" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
@@ -57,9 +57,11 @@
 		</nav>
 	</div>
 </div>
+</div>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
+<main>
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
@@ -75,8 +77,9 @@
 		</div>
 	</div>
 </div>
+</main>
 <!-- bloc-1-presentation END -->
-
+<section>
 <!-- bloc-2-services -->
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
@@ -136,9 +139,11 @@
 		</div>
 	</div>
 </div>
+</section>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
+<article>
 <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
@@ -209,6 +214,7 @@
 		</div>
 	</div>
 </div>
+
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
@@ -224,9 +230,11 @@
 		</div>
 	</div>
 </div>
+</article>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
+<footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -258,9 +266,10 @@
 		</div>
 	</div>
 </div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
-</div>
+
 <!-- Principal conteneur END -->
     
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
