--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,7 @@
 		</nav>
 	</div>
 </div>
+</div>
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
@@ -149,7 +150,7 @@
 
 
 <!-- Footer - bloc-8 -->
-
+<footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -181,7 +182,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
+
 <!-- Footer - bloc-8 END -->
 
 
