modification sur aria-labeel' nav' en aria-label' navigation vers ...

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html" aria-label="lien vers acceuil" ><img src="img/agence-la-panthere-monochrome.svg" alt="la panthere web design logo" height="40"></a>
-				<button id="nav-toggle" aria-label="labeldiv" title="contact" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<button id="nav-toggle" aria-label="navigation vers page contact et acceuil" title="contact" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
