--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand"  aria-label="lien vers acceuil" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="lyon web design logo agence web meilleure agence" height="40"></a>
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à lyon, stratégie web, web design, illustrations, design de site web, createur de site web, web, internet, campagne de marketing digital , site, web designer contact</div>
-				<button id="nav-toggle" aria-label="nav" type="button" title="contact" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<button id="nav-toggle" aria-label="navigation vers page contact et acceuil" type="button" title="contact" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
